# signpy

./: .gitignore  LICENCE.txt  README.md  pyproject.toml  test.py
signpy/: __init__.py  signals.py
