[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "signpy"
version = "1.0"
authors = [
  { name="Luca Zoffoli", email="lzoffoli@technogym.com" },
]
description = "A convenient notification tool between python classes."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/ZofTG/signpy"
"Bug Tracker" = "https://github.com/ZofTG/signpy/issues"
